@@ -37,7 +37,7 @@
   </castle>
 
   <system.diagnostics>
-    <sources>      
+    <sources>
       <source name="Default" switchValue="Information">
         <listeners>
           <add name="stdout"/>
